# fruit-sorting-gazebo-ignite

./: .gitignore  README.md  proyecto_ros2_completo.txt  readme.md
collaborative_arm_application/: package.xml  setup.cfg  setup.py
collaborative_arm_application/collaborative_arm_application/: cartesian_jogger.py  config.py
collaborative_arm_bringup/: CMakeLists.txt  package.xml
collaborative_arm_bringup/launch/: system.launch.py
collaborative_arm_description/: CMakeLists.txt  package.xml
collaborative_arm_description/urdf/: collaborative_arm.urdf.xacro
collaborative_arm_gazebo/: CMakeLists.txt  package.xml
collaborative_arm_gazebo/config/: arm_controllers.yaml
collaborative_arm_gazebo/launch/: start_gazebo.launch.py
collaborative_arm_gazebo/worlds/: fruit_sorting.world
collaborative_arm_kinematics/: CMakeLists.txt  package.xml
collaborative_arm_kinematics/src/: ik_solver_node.cpp
collaborative_arm_vision/: package.xml  setup.cfg  setup.py
collaborative_arm_vision/collaborative_arm_vision/: vision_detector.py
