# ==============================================================================
# File: CMakeLists.txt
# Purpose: Build configuration for the collaborative_arm_gazebo package.
#          It ensures the worlds, config, and launch folders are installed.
# ==============================================================================

cmake_minimum_required(VERSION 3.8)
project(collaborative_arm_gazebo)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)

# Install directories required for the simulation to run properly
install(DIRECTORY
  worlds
  config
  launch
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()