<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- 
==============================================================================
File: package.xml
Purpose: Defines the package properties and dependencies required for the 
         collaborative_arm_gazebo package, including modern Gazebo packages.
==============================================================================
-->
<package format="3">
  <name>collaborative_arm_gazebo</name>
  <version>0.0.0</version>
  <description>Simulation files and world definitions for Gazebo Sim</description>
  <maintainer email="luis_glez2626@outlook.com">luis-glez</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>collaborative_arm_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>