<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- 
==============================================================================
File: package.xml
Purpose: Defines package properties and C++ dependencies for the 
         collaborative_arm_kinematics package (Inverse Kinematics solver).
==============================================================================
-->
<package format="3">
  <name>collaborative_arm_kinematics</name>
  <version>0.0.0</version>
  <description>Inverse Kinematics solver using KDL for the robotic arm</description>
  <maintainer email="luis_glez2626@outlook.com">luis-glez</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>